       the v2.17 release; and is no longer present in any supported release
       since v2.17 went EOL when v3.5 was released.
   - The following AVX512-specific features are now deprecated:
     * AVX512-optimized DPCLS lookups.
     * AVX512-optimized action handling.
     * AVX512-optimized miniflow extraction.
     * AVX512-optimized DPIF input processing.


v3.6.0 - 18 Aug 2025
--------------------
   - Bonding:
     * Bond rebalancing log messages of INFO log level are highly reduced: they
       are now printed once in rebalance run.  Previous detailed log messages
       have been moved to the DBG log level.
   - DPDK:
     * New debug appctl command 'dpdk/get-memzone-stats'.
     * Removed upper limit for the number of rx/tx descriptors (n_r/txq_desc).
     * OVS validated with DPDK 24.11.2.
   - OVSDB performance:
     * Table indexes are now used for lookups while processing certain database
       queries (e.g. 'select' operation).
     * JSON data structures are re-worked to allow storing short strings and
       arrays in-place, improving performance and the total memory usage.
   - OVSDB-IDL:
     * New functions <db>_<table>_<column>_server_type() that allow checking
       the server-side type of a particular column.  Can be used for checking
       type constraints when the server schema is older or newer than that of
       the client.
   - ovs-ctl:
     * Added a new option, --oom-score=<score>, to set the daemons' Linux
       Out-Of-Memory (OOM) killer score.
     * Added a new option, --ulimit-core=<LIMIT>, to set the daemon's ulimit
       core file size.
   - ovs-appctl:
     * Added JSON output support to 'ovs/route/show' and 'fdb/show' commands.
   - ovs-vsctl:
     * Now exits with error code 160 (ERROR_BAD_ARGUMENTS) on Windows and
       65 (EX_DATAERR) on other platforms if it fails while waiting for
       ovs-vswitchd to finish reconfiguring itself after a successful