@@ -35,6 +35,9 @@ Post-v3.6.0
      * AVX512-optimized action handling.
      * AVX512-optimized miniflow extraction.
      * AVX512-optimized DPIF input processing.
+   - ovs-appctl:
+     * 'ovs/route/show': added new option, table=[ID|all], to list routes from
+       a specific table or all routes from all tables.
 
 
 v3.6.0 - 18 Aug 2025
